// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: BasicInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

#### Deprecated

This prop is deprecated

#### See

Comments for some tag

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for functionProper

#### Parameters

##### s

\`string\`

Comment for param s

#### Returns

\`boolean\`

***

### optionalProp?

> \`optional\` **optionalProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for optional prop

***

### prop

> **prop**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for prop

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`object\` & \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

***

### propReturningSignatureDeclaration()?

> \`optional\` **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningSignatureDeclarations

***

### propWithFunction()

> **propWithFunction**: (\`options\`) => \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propWithFunction

#### Parameters

##### options

###### a

\`boolean\`

###### b

\`string\`

#### Returns

\`boolean\`

***

### propWithProps

> **propWithProps**: \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propWithProps

#### callbacks?

> \`optional\` **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`
"
`;

exports[`Interface Reflection should compile basic interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: BasicInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for BasicInterface

## Extended by

- [\`ExtendedInterface\`](ExtendedInterface.md)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="deprecatedprop"></a> ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated** This prop is deprecated **See** Comments for some tag |
| <a id="functionprop"></a> \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper |
| <a id="optionalprop"></a> \`optionalProp?\` | \`string\` | Comments for optional prop |
| <a id="prop"></a> \`prop\` | \`string\` | Comments for prop |
| <a id="propreturningobjectdeclaration"></a> \`propReturningObjectDeclaration\` | \`object\` | Comments for propReturningObjectDeclaration |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - |
| <a id="propreturningobjectdeclarations"></a> \`propReturningObjectDeclarations\` | \`object\` & \`object\` | Comments for propReturningObjectDeclarations |
| <a id="propreturningsignaturedeclaration"></a> \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration |
| <a id="propreturningsignaturedeclarations"></a> \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations |
| <a id="propwithfunction"></a> \`propWithFunction\` | (\`options\`: \`object\`) => \`boolean\` | Comments for propWithFunction |
| <a id="propwithprops"></a> \`propWithProps\` | \`object\` | Comments for propWithProps |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB |
| \`propWithProps.nestedPropC\` | \`object\` | Comments for nestedPropC |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD |
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: ExtendedInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

### ~~deprecatedProp~~

> **deprecatedProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

#### Deprecated

This prop is deprecated

#### See

Comments for some tag

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`deprecatedProp\`](BasicInterface.md#deprecatedprop)

***

### extendedProp

> **extendedProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

***

### functionProp()

> **functionProp**: (\`s\`) => \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for functionProper

#### Parameters

##### s

\`string\`

Comment for param s

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`functionProp\`](BasicInterface.md#functionprop)

***

### optionalProp?

> \`optional\` **optionalProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for optional prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`optionalProp\`](BasicInterface.md#optionalprop)

***

### prop

> **prop**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for prop

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`prop\`](BasicInterface.md#prop)

***

### propReturningObjectDeclaration

> **propReturningObjectDeclaration**: \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningObjectDeclaration

#### a

> **a**: \`boolean\`

#### b

> **b**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclaration\`](BasicInterface.md#propreturningobjectdeclaration)

***

### propReturningObjectDeclarations

> **propReturningObjectDeclarations**: \`object\` & \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningObjectDeclarations

#### Type declaration

##### a

> **a**: \`boolean\`

##### b

> **b**: \`string\`

#### Type declaration

##### c

> **c**: \`boolean\`

##### d

> **d**: \`string\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclarations\`](BasicInterface.md#propreturningobjectdeclarations)

***

### propReturningSignatureDeclaration()?

> \`optional\` **propReturningSignatureDeclaration**: () => \`string\` \\| \`number\` \\| \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningSignatureDeclaration

#### Returns

\`string\` \\| \`number\` \\| \`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclaration\`](BasicInterface.md#propreturningsignaturedeclaration)

***

### propReturningSignatureDeclarations

> **propReturningSignatureDeclarations**: () => \`any\` & (\`paramsA\`, \`paramsB\`?) => \`any\` & (\`paramsC\`) => \`any\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propReturningSignatureDeclarations

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclarations\`](BasicInterface.md#propreturningsignaturedeclarations)

***

### propWithFunction()

> **propWithFunction**: (\`options\`) => \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propWithFunction

#### Parameters

##### options

###### a

\`boolean\`

###### b

\`string\`

#### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propWithFunction\`](BasicInterface.md#propwithfunction)

***

### propWithProps

> **propWithProps**: \`object\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for propWithProps

#### callbacks?

> \`optional\` **callbacks**: \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\>

Comments for callbacks

#### nestedPropA

> **nestedPropA**: \`string\`

Comments for nestedPropA

#### nestedPropB

> **nestedPropB**: \`boolean\`

Comments for nestedPropB

#### nestedPropC

> **nestedPropC**: \`object\`

Comments for nestedPropC

##### nestedPropC.nestedPropCA

> **nestedPropCA**: \`string\`

Comments for nestedPropCA

#### nestedPropD()

> **nestedPropD**: () => \`boolean\`

Comments for nestedPropD

##### Returns

\`boolean\`

#### Inherited from

[\`BasicInterface\`](BasicInterface.md).[\`propWithProps\`](BasicInterface.md#propwithprops)
"
`;

exports[`Interface Reflection should compile extended interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: ExtendedInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for ExtendedInterface

## Extends

- [\`BasicInterface\`](BasicInterface.md)

## Properties

| Property | Type | Description | Inherited from |
| :------ | :------ | :------ | :------ |
| <a id="deprecatedprop"></a> ~~\`deprecatedProp\`~~ | \`string\` | **Deprecated** This prop is deprecated **See** Comments for some tag | [\`BasicInterface\`](BasicInterface.md).[\`deprecatedProp\`](BasicInterface.md#deprecatedprop) |
| <a id="extendedprop"></a> \`extendedProp\` | \`string\` | - | - |
| <a id="functionprop"></a> \`functionProp\` | (\`s\`: \`string\`) => \`boolean\` | Comments for functionProper | [\`BasicInterface\`](BasicInterface.md).[\`functionProp\`](BasicInterface.md#functionprop) |
| <a id="optionalprop"></a> \`optionalProp?\` | \`string\` | Comments for optional prop | [\`BasicInterface\`](BasicInterface.md).[\`optionalProp\`](BasicInterface.md#optionalprop) |
| <a id="prop"></a> \`prop\` | \`string\` | Comments for prop | [\`BasicInterface\`](BasicInterface.md).[\`prop\`](BasicInterface.md#prop) |
| <a id="propreturningobjectdeclaration"></a> \`propReturningObjectDeclaration\` | \`object\` | Comments for propReturningObjectDeclaration | [\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclaration\`](BasicInterface.md#propreturningobjectdeclaration) |
| \`propReturningObjectDeclaration.a\` | \`boolean\` | - | - |
| \`propReturningObjectDeclaration.b\` | \`string\` | - | - |
| <a id="propreturningobjectdeclarations"></a> \`propReturningObjectDeclarations\` | \`object\` & \`object\` | Comments for propReturningObjectDeclarations | [\`BasicInterface\`](BasicInterface.md).[\`propReturningObjectDeclarations\`](BasicInterface.md#propreturningobjectdeclarations) |
| <a id="propreturningsignaturedeclaration"></a> \`propReturningSignatureDeclaration?\` | () => \`string\` \\| \`number\` \\| \`boolean\` | Comments for propReturningSignatureDeclaration | [\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclaration\`](BasicInterface.md#propreturningsignaturedeclaration) |
| <a id="propreturningsignaturedeclarations"></a> \`propReturningSignatureDeclarations\` | () => \`any\` & (\`paramsA\`: \`true\` \\| \`any\`[], \`paramsB\`?: \`any\`) => \`any\` & (\`paramsC\`: \`any\`) => \`any\` | Comments for propReturningSignatureDeclarations | [\`BasicInterface\`](BasicInterface.md).[\`propReturningSignatureDeclarations\`](BasicInterface.md#propreturningsignaturedeclarations) |
| <a id="propwithfunction"></a> \`propWithFunction\` | (\`options\`: \`object\`) => \`boolean\` | Comments for propWithFunction | [\`BasicInterface\`](BasicInterface.md).[\`propWithFunction\`](BasicInterface.md#propwithfunction) |
| <a id="propwithprops"></a> \`propWithProps\` | \`object\` | Comments for propWithProps | [\`BasicInterface\`](BasicInterface.md).[\`propWithProps\`](BasicInterface.md#propwithprops) |
| \`propWithProps.callbacks?\` | \`Partial\`\\<[\`CallbacksOptions\`](../classes/CallbacksOptions.md)\\<[\`DisposableClass\`](../classes/DisposableClass.md), [\`ClassWithModifiers\`](../classes/ClassWithModifiers.md)\\>\\> | Comments for callbacks | - |
| \`propWithProps.nestedPropA\` | \`string\` | Comments for nestedPropA | - |
| \`propWithProps.nestedPropB\` | \`boolean\` | Comments for nestedPropB | - |
| \`propWithProps.nestedPropC\` | \`object\` | Comments for nestedPropC | - |
| \`propWithProps.nestedPropC.nestedPropCA\` | \`string\` | Comments for nestedPropCA | - |
| \`propWithProps.nestedPropD\` | () => \`boolean\` | Comments for nestedPropD | - |
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: IndexableInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for IndexableInterface

## Indexable

\\[\`s\`: \`string\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)
"
`;

exports[`Interface Reflection should compile indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: IndexableInterface

Defined in: [interfaces.ts:1](http://source-url)

Comments for IndexableInterface

## Indexable

\`\`\`ts
[s: string]: string
\`\`\`

## Properties

| Property | Type |
| :------ | :------ |
| <a id="prop"></a> \`prop\` | \`string\` |
"
`;

exports[`Interface Reflection should compile interface with comments: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithComments\\<A, B, C, D\\>

Defined in: [interfaces.ts:1](http://source-url)

Comments for interface
over two lines

And some more comments

## Type Parameters

### A

\`A\`

This is a parameter.

### B

\`B\`

Comments for a parameter.
This sentence is on a soft new line.

### C

\`C\`

This is a parameter.

 Documentation with a double line

### D

\`D\`

<p>These are comments with paras</p>
<p>These are comments with paras</p>
Other comments
Comments with <p>paras</p>

<p>These are comments with paras</p>

## Properties

### ~~propertyWithComments~~

> **propertyWithComments**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Some text.

- list item
- list item

#### Deprecated

This is a deprecated property

#### See

https://example.com
"
`;

exports[`Interface Reflection should compile interface with comments: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithComments\\<A, B, C, D\\>

Defined in: [interfaces.ts:1](http://source-url)

Comments for interface
over two lines

And some more comments

## Type Parameters

| Type Parameter | Description |
| :------ | :------ |
| \`A\` | This is a parameter. |
| \`B\` | Comments for a parameter. This sentence is on a soft new line. |
| \`C\` | This is a parameter. Documentation with a double line |
| \`D\` | <p>These are comments with paras</p> <p>These are comments with paras</p> Other comments Comments with <p>paras</p> <p>These are comments with paras</p> |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="propertywithcomments"></a> ~~\`propertyWithComments\`~~ | \`string\` | Some text. - list item - list item **Deprecated** This is a deprecated property **See** https://example.com |
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithEventProperties

Defined in: [interfaces.ts:1](http://source-url)

## Properties

### someProp?

> \`optional\` **someProp**: \`boolean\`

Defined in: [interfaces.ts:1](http://source-url)

Description for prop someProp

## Events

### anotherEvent

> **anotherEvent**: \`MouseEvent\`

Defined in: [interfaces.ts:1](http://source-url)

***

### ~~someEvent()?~~

> \`optional\` **someEvent**: (\`eventParam\`) => \`void\`

Defined in: [interfaces.ts:1](http://source-url)

Description for event someEvent

#### Deprecated

Deprectaed comments

#### Parameters

##### eventParam

[\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>

Comments for param eventParam

#### Returns

\`void\`
"
`;

exports[`Interface Reflection should compile interface with event properties: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithEventProperties

Defined in: [interfaces.ts:1](http://source-url)

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="someprop"></a> \`someProp?\` | \`boolean\` | Description for prop someProp |

## Events

| Event | Type | Description |
| :------ | :------ | :------ |
| <a id="anotherevent"></a> \`anotherEvent\` | \`MouseEvent\` | - |
| <a id="someevent"></a> ~~\`someEvent?\`~~ | (\`eventParam\`: [\`CustomEventInterface\`](CustomEventInterface.md)\\<\`MouseEvent\`\\>) => \`void\` | Description for event someEvent **Deprecated** Deprectaed comments |
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithFlags

Defined in: [interfaces.ts:1](http://source-url)

Comments for InterfaceWithFlags

## Properties

### expermintalProp?

> \`optional\` **expermintalProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

**\`Experimental\`**

***

### internalProp

> **internalProp**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

**\`Internal\`**

Comments for internalProp
"
`;

exports[`Interface Reflection should compile interface with flags: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithFlags

Defined in: [interfaces.ts:1](http://source-url)

Comments for InterfaceWithFlags

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="expermintalprop"></a> \`expermintalProp?\` | \`string\` | **\`Experimental\`** |
| <a id="internalprop"></a> \`internalProp\` | \`string\` | **\`Internal\`** Comments for internalProp |
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: InterfaceWithTypeParameters\\<A\\>

Defined in: [interfaces.ts:1](http://source-url)

Comments for InterfaceWithTypeParameters

## Type Parameters

### A

\`A\`

## Properties

### prop

> **prop**: \`A\`

Defined in: [interfaces.ts:1](http://source-url)

Comments for prop
"
`;

exports[`Interface Reflection should compile interface with type parameters: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: InterfaceWithTypeParameters\\<A\\>

Defined in: [interfaces.ts:1](http://source-url)

Comments for InterfaceWithTypeParameters

## Type Parameters

| Type Parameter |
| :------ |
| \`A\` |

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop"></a> \`prop\` | \`A\` | Comments for prop |
"
`;

exports[`Interface Reflection should compile multiple indexable interface: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Interface: MultipleIndexableInterface

Defined in: [interfaces.ts:1](http://source-url)

## Indexable

\\[\`key\`: \`string\`\\]: \`string\`

\\[\`index\`: \`number\`\\]: \`string\`

## Properties

### prop

> **prop**: \`string\`

Defined in: [interfaces.ts:1](http://source-url)

Prop
"
`;

exports[`Interface Reflection should compile multiple indexable interface: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Interface: MultipleIndexableInterface

Defined in: [interfaces.ts:1](http://source-url)

## Indexable

\`\`\`ts
[key: string]: string
\`\`\`

\`\`\`ts
[index: number]: string
\`\`\`

## Properties

| Property | Type | Description |
| :------ | :------ | :------ |
| <a id="prop"></a> \`prop\` | \`string\` | Prop |
"
`;
